--- a/maehara.bib
+++ b/maehara.bib
@@ -13,11 +13,6 @@
  volume = {abs/1901.08291},
  year = {2019},
  url = {http://arxiv.org/abs/1901.08291},
- archivePrefix = {arXiv},
- eprint = {1901.08291},
- timestamp = {Sun, 03 Feb 2019 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1901-08291},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/abs-1902-08742,
  author = {Takanori Maehara and
@@ -27,11 +22,6 @@
  volume = {abs/1902.08742},
  year = {2019},
  url = {http://arxiv.org/abs/1902.08742},
- archivePrefix = {arXiv},
- eprint = {1902.08742},
- timestamp = {Mon, 04 Mar 2019 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1902-08742},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/mp/MaeharaMM18,
  author = {Takanori Maehara and
@@ -44,10 +34,6 @@
  pages = {199--219},
  year = {2018},
  url = {https://doi.org/10.1007/s10107-017-1139-2},
- doi = {10.1007/s10107-017-1139-2},
- timestamp = {Tue, 17 Apr 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/mp/MaeharaMM18},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/netsci/TakaguchiMKT18,
  author = {Taro Takaguchi and
@@ -62,10 +48,6 @@
  pages = {431--447},
  year = {2018},
  url = {https://doi.org/10.1017/nws.2018.17},
- doi = {10.1017/nws.2018.17},
- timestamp = {Wed, 27 Feb 2019 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/journals/netsci/TakaguchiMKT18},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/tkdd/BollegalaAMK18,
  author = {Danushka Bollegala and
@@ -79,10 +61,6 @@
  pages = {55:1--55:29},
  year = {2018},
  url = {https://doi.org/10.1145/3201578},
- doi = {10.1145/3201578},
- timestamp = {Wed, 21 Nov 2018 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/journals/tkdd/BollegalaAMK18},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/aaai/OsogamiRGSM18,
  author = {Takayuki Osogami and
@@ -98,11 +76,7 @@
  2-7, 2018},
  pages = {3868--3875},
  year = {2018},
- crossref = {DBLP:conf/aaai/2018},
  url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16081},
- timestamp = {Tue, 23 Oct 2018 06:42:15 +0200},
- biburl = {https://dblp.org/rec/bib/conf/aaai/OsogamiRGSM18},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/acssc/CoutinoIML18,
  author = {Mario Coutino and
@@ -115,12 +89,7 @@
  2018, Pacific Grove, CA, USA, October 28-31, 2018},
  pages = {993--997},
  year = {2018},
- crossref = {DBLP:conf/acssc/2018},
  url = {https://doi.org/10.1109/ACSSC.2018.8645186},
- doi = {10.1109/ACSSC.2018.8645186},
- timestamp = {Thu, 28 Feb 2019 17:25:09 +0100},
- biburl = {https://dblp.org/rec/bib/conf/acssc/CoutinoIML18},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/aistats/ImaizumiMY18,
  author = {Masaaki Imaizumi and
@@ -132,11 +101,7 @@
  Spain},
  pages = {978--987},
  year = {2018},
- crossref = {DBLP:conf/aistats/2018},
  url = {http://proceedings.mlr.press/v84/imaizumi18a.html},
- timestamp = {Sun, 15 Apr 2018 20:06:04 +0200},
- biburl = {https://dblp.org/rec/bib/conf/aistats/ImaizumiMY18},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/icml/TaniaiM18,
  author = {Tatsunori Taniai and
@@ -147,11 +112,7 @@
  10-15, 2018},
  pages = {4864--4873},
  year = {2018},
- crossref = {DBLP:conf/icml/2018},
  url = {http://proceedings.mlr.press/v80/taniai18a.html},
- timestamp = {Fri, 13 Jul 2018 14:57:00 +0200},
- biburl = {https://dblp.org/rec/bib/conf/icml/TaniaiM18},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/ijcai/MaeharaNBK18,
  author = {Takanori Maehara and
@@ -164,12 +125,7 @@
  Sweden.},
  pages = {424--432},
  year = {2018},
- crossref = {DBLP:conf/ijcai/2018},
  url = {https://doi.org/10.24963/ijcai.2018/59},
- doi = {10.24963/ijcai.2018/59},
- timestamp = {Sat, 28 Jul 2018 14:39:21 +0200},
- biburl = {https://dblp.org/rec/bib/conf/ijcai/MaeharaNBK18},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/soda/YamaguchiM18,
  author = {Yutaro Yamaguchi and
@@ -179,103 +135,23 @@
  Algorithms, {SODA} 2018, New Orleans, LA, USA, January 7-10, 2018},
  pages = {293--310},
  year = {2018},
- crossref = {DBLP:conf/soda/2018},
  url = {https://doi.org/10.1137/1.9781611975031.21},
- doi = {10.1137/1.9781611975031.21},
- timestamp = {Thu, 04 Jan 2018 13:32:12 +0100},
- biburl = {https://dblp.org/rec/bib/conf/soda/YamaguchiM18},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-@article{DBLP:journals/corr/abs-1802-10328,
- author = {Tatsunori Taniai and
- Takanori Maehara},
- title = {Neural Photometric Stereo Reconstruction for General Reflectance Surfaces},
- journal = {CoRR},
- volume = {abs/1802.10328},
- year = {2018},
- url = {http://arxiv.org/abs/1802.10328},
- archivePrefix = {arXiv},
- eprint = {1802.10328},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1802-10328},
- bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-@article{DBLP:journals/corr/abs-1804-05260,
- author = {Danushka Bollegala and
- Vincent Atanasov and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
- title = {ClassiNet - Predicting Missing Features for Short-Text Classification},
- journal = {CoRR},
- volume = {abs/1804.05260},
- year = {2018},
- url = {http://arxiv.org/abs/1804.05260},
- archivePrefix = {arXiv},
- eprint = {1804.05260},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1804-05260},
- bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-@article{DBLP:journals/corr/abs-1805-07455,
- author = {So Nakashima and
- Takanori Maehara},
- title = {Subspace Selection via DR-Submodular Maximization on Lattices},
- journal = {CoRR},
- volume = {abs/1805.07455},
- year = {2018},
- url = {http://arxiv.org/abs/1805.07455},
- archivePrefix = {arXiv},
- eprint = {1805.07455},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1805-07455},
- bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-@article{DBLP:journals/corr/abs-1806-07004,
- author = {Satoshi Hara and
- Kouichi Ikeno and
- Tasuku Soma and
- Takanori Maehara},
+@article{hara2018maximally,
+ author = {Satoshi Hara and Kouichi Ikeno and Tasuku Soma and Takanori Maehara},
  title = {Maximally Invariant Data Perturbation as Explanation},
  journal = {CoRR},
  volume = {abs/1806.07004},
  year = {2018},
  url = {http://arxiv.org/abs/1806.07004},
- archivePrefix = {arXiv},
- eprint = {1806.07004},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1806-07004},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-@article{DBLP:journals/corr/abs-1807-04575,
- author = {Masakazu Ishihata and
- Takanori Maehara and
- Tomas Rigaux},
+@article{ishihata2018algorithmic,
+ author = {Masakazu Ishihata and Takanori Maehara and Tomas Rigaux},
  title = {Algorithmic Meta-Theorems for Monotone Submodular Maximization},
  journal = {CoRR},
  volume = {abs/1807.04575},
  year = {2018},
  url = {http://arxiv.org/abs/1807.04575},
- archivePrefix = {arXiv},
- eprint = {1807.04575},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1807-04575},
- bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-@article{DBLP:journals/corr/abs-1807-04942,
- author = {Soh Kumabe and
- Takanori Maehara and
- Ryoma Sin'ya},
- title = {Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained
- Tree Knapsack Problem},
- journal = {CoRR},
- volume = {abs/1807.04942},
- year = {2018},
- url = {http://arxiv.org/abs/1807.04942},
- archivePrefix = {arXiv},
- eprint = {1807.04942},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1807-04942},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/abs-1810-01730,
  author = {Ben Chugg and
@@ -287,68 +163,38 @@
  url = {http://arxiv.org/abs/1810.01730},
  archivePrefix = {arXiv},
  eprint = {1810.01730},
- timestamp = {Tue, 30 Oct 2018 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1810-01730},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-@article{DBLP:journals/corr/abs-1810-04996,
- author = {Junpei Komiyama and
- Takanori Maehara},
+@article{komiyama2018simple,
+ author = {Junpei Komiyama and Takanori Maehara},
  title = {A Simple Way to Deal with Cherry-picking},
  journal = {CoRR},
  volume = {abs/1810.04996},
  year = {2018},
  url = {http://arxiv.org/abs/1810.04996},
- archivePrefix = {arXiv},
- eprint = {1810.04996},
- timestamp = {Thu, 01 Nov 2018 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1810-04996},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-@article{DBLP:journals/corr/abs-1810-05992,
- author = {Satoshi Hara and
- Takanori Maehara},
+@article{hara2018convex,
+ author = {Satoshi Hara and Takanori Maehara},
  title = {Convex Hull Approximation of Nearly Optimal Lasso Solutions},
  journal = {CoRR},
  volume = {abs/1810.05992},
  year = {2018},
  url = {http://arxiv.org/abs/1810.05992},
- archivePrefix = {arXiv},
- eprint = {1810.05992},
- timestamp = {Thu, 01 Nov 2018 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/journals/corr/abs-1810-05992},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-@inproceedings{DBLP:conf/aaai/MaeharaKSTK17,
- author = {Takanori Maehara and
- Yasushi Kawase and
- Hanna Sumita and
- Katsuya Tono and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{maehara2017optimal,
+ author = {Takanori Maehara and Yasushi Kawase and Hanna Sumita and Katsuya Tono and Ken{-}ichi Kawarabayashi},
  title = {Optimal Pricing for Submodular Valuations with Bounded Curvature},
- booktitle = {Proceedings of the Thirty-First {AAAI} Conference on Artificial Intelligence,
- February 4-9, 2017, San Francisco, California, {USA.}},
+ booktitle = {Proceedings of the 31st AAAI Conference on Artificial Intelligence, February 4-9, 2017, San Francisco, California, USA.},
  pages = {622--628},
  year = {2017},
- crossref = {DBLP:conf/aaai/2017},
  url = {http://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14562},
- timestamp = {Mon, 06 Mar 2017 08:17:31 +0100},
- biburl = {https://dblp.org/rec/bib/conf/aaai/MaeharaKSTK17},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-@inproceedings{DBLP:conf/aaai/HaraM17,
- author = {Satoshi Hara and
- Takanori Maehara},
+@inproceedings{hara2017enumerate,
+ author = {Satoshi Hara and Takanori Maehara},
  title = {Enumerate Lasso Solutions for Feature Selection},
- booktitle = {Proceedings of the Thirty-First {AAAI} Conference on Artificial Intelligence,
- February 4-9, 2017, San Francisco, California, {USA.}},
+ booktitle = {Proceedings of the 31st AAAI Conference on Artificial Intelligence, February 4-9, 2017, San Francisco, California, USA.},
  pages = {1985--1991},
  year = {2017},
- crossref = {DBLP:conf/aaai/2017},
  url = {http://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14304},
- timestamp = {Mon, 06 Mar 2017 08:17:31 +0100},
- biburl = {https://dblp.org/rec/bib/conf/aaai/HaraM17},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/aaai/HatanoFMK17,
  author = {Daisuke Hatano and
@@ -360,11 +206,7 @@
  February 4-9, 2017, San Francisco, California, {USA.}},
  pages = {1992--1999},
  year = {2017},
- crossref = {DBLP:conf/aaai/2017},
  url = {http://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14850},
- timestamp = {Mon, 06 Mar 2017 08:17:31 +0100},
- biburl = {https://dblp.org/rec/bib/conf/aaai/HatanoFMK17},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/nips/ImaizumiMH17,
  author = {Masaaki Imaizumi and
@@ -377,11 +219,7 @@
  Long Beach, CA, {USA}},
  pages = {3933--3942},
  year = {2017},
- crossref = {DBLP:conf/nips/2017},
  url = {http://papers.nips.cc/paper/6982-on-tensor-train-rank-minimization-statistical-efficiency-and-scalable-algorithm},
- timestamp = {Mon, 27 Nov 2017 12:38:16 +0100},
- biburl = {https://dblp.org/rec/bib/conf/nips/ImaizumiMH17},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/www/MaeharaSI17,
  author = {Takanori Maehara and
@@ -392,12 +230,7 @@
  {WWW} 2017, Perth, Australia, April 3-7, 2017},
  pages = {947--956},
  year = {2017},
- crossref = {DBLP:conf/www/2017},
  url = {https://doi.org/10.1145/3038912.3052567},
- doi = {10.1145/3038912.3052567},
- timestamp = {Tue, 06 Nov 2018 16:57:07 +0100},
- biburl = {https://dblp.org/rec/bib/conf/www/MaeharaSI17},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/MaeharaSI17,
  author = {Takanori Maehara and
@@ -410,9 +243,6 @@
  url = {http://arxiv.org/abs/1701.01540},
  archivePrefix = {arXiv},
  eprint = {1701.01540},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/MaeharaSI17},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/FukunagaM17,
  author = {Takuro Fukunaga and
@@ -424,9 +254,6 @@
  url = {http://arxiv.org/abs/1701.08897},
  archivePrefix = {arXiv},
  eprint = {1701.08897},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/FukunagaM17},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/TakabeMH17,
  author = {Satoshi Takabe and
@@ -439,9 +266,6 @@
  url = {http://arxiv.org/abs/1706.08721},
  archivePrefix = {arXiv},
  eprint = {1706.08721},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/TakabeMH17},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/MaeharaY17,
  author = {Takanori Maehara and
@@ -453,9 +277,6 @@
  url = {http://arxiv.org/abs/1707.04020},
  archivePrefix = {arXiv},
  eprint = {1707.04020},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/MaeharaY17},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/snam/NishiTOMTKM16,
  author = {Ryosuke Nishi and
@@ -472,10 +293,6 @@
  pages = {26:1--26:13},
  year = {2016},
  url = {https://doi.org/10.1007/s13278-016-0334-0},
- doi = {10.1007/s13278-016-0334-0},
- timestamp = {Tue, 26 Jun 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/snam/NishiTOMTKM16},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/aaai/MaeharaHK16,
  author = {Takanori Maehara and
@@ -486,11 +303,7 @@
  February 12-17, 2016, Phoenix, Arizona, {USA.}},
  pages = {1919--1925},
  year = {2016},
- crossref = {DBLP:conf/aaai/2016},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/12371},
- timestamp = {Wed, 05 Apr 2017 12:53:50 +0200},
- biburl = {https://dblp.org/rec/bib/conf/aaai/MaeharaHK16},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/aaai/BollegalaAMK16,
  author = {Danushka Bollegala and
@@ -502,11 +315,7 @@
  February 12-17, 2016, Phoenix, Arizona, {USA.}},
  pages = {2690--2696},
  year = {2016},
- crossref = {DBLP:conf/aaai/2016},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/11855},
- timestamp = {Wed, 05 Apr 2017 12:53:50 +0200},
- biburl = {https://dblp.org/rec/bib/conf/aaai/BollegalaAMK16},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/cocoa/FukunagaM16,
  author = {Takuro Fukunaga and
@@ -516,12 +325,7 @@
  {COCOA} 2016, Hong Kong, China, December 16-18, 2016, Proceedings},
  pages = {77--91},
  year = {2016},
- crossref = {DBLP:conf/cocoa/2016},
  url = {https://doi.org/10.1007/978-3-319-48749-6\_6},
- doi = {10.1007/978-3-319-48749-6\_6},
- timestamp = {Sat, 16 Sep 2017 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/conf/cocoa/FukunagaM16},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/MaeharaKSTK16,
  author = {Takanori Maehara and
@@ -536,9 +340,6 @@
  url = {http://arxiv.org/abs/1611.07605},
  archivePrefix = {arXiv},
  eprint = {1611.07605},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/MaeharaKSTK16},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/anor/MaeharaM15,
  author = {Takanori Maehara and
@@ -550,10 +351,6 @@
  pages = {565--590},
  year = {2015},
  url = {https://doi.org/10.1007/s10479-015-1835-3},
- doi = {10.1007/s10479-015-1835-3},
- timestamp = {Sat, 27 May 2017 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/anor/MaeharaM15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/mp/MaeharaM15,
  author = {Takanori Maehara and
@@ -565,10 +362,6 @@
  pages = {435--466},
  year = {2015},
  url = {https://doi.org/10.1007/s10107-014-0792-y},
- doi = {10.1007/s10107-014-0792-y},
- timestamp = {Sat, 27 May 2017 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/mp/MaeharaM15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/orl/Maehara15,
  author = {Takanori Maehara},
@@ -579,10 +372,6 @@
  pages = {526--529},
  year = {2015},
  url = {https://doi.org/10.1016/j.orl.2015.08.001},
- doi = {10.1016/j.orl.2015.08.001},
- timestamp = {Sat, 27 May 2017 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/orl/Maehara15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/aaai/HatanoFMK15,
  author = {Daisuke Hatano and
@@ -594,11 +383,7 @@
  January 25-30, 2015, Austin, Texas, {USA.}},
  pages = {1144--1150},
  year = {2015},
- crossref = {DBLP:conf/aaai/2015},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9326},
- timestamp = {Sun, 12 Apr 2015 12:16:43 +0200},
- biburl = {https://dblp.org/rec/bib/conf/aaai/HatanoFMK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/aaai/BollegalaMYK15,
  author = {Danushka Bollegala and
@@ -610,11 +395,7 @@
  January 25-30, 2015, Austin, Texas, {USA.}},
  pages = {2146--2152},
  year = {2015},
- crossref = {DBLP:conf/aaai/2015},
  url = {http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9717},
- timestamp = {Sun, 12 Apr 2015 12:16:43 +0200},
- biburl = {https://dblp.org/rec/bib/conf/aaai/BollegalaMYK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/acl/BollegalaMK15,
  author = {Danushka Bollegala and
@@ -627,11 +408,7 @@
  {ACL} 2015, July 26-31, 2015, Beijing, China, Volume 1: Long Papers},
  pages = {730--740},
  year = {2015},
- crossref = {DBLP:conf/acl/2015-1},
  url = {http://aclweb.org/anthology/P/P15/P15-1071.pdf},
- timestamp = {Sun, 02 Aug 2015 19:10:39 +0200},
- biburl = {https://dblp.org/rec/bib/conf/acl/BollegalaMK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/icde/MaeharaKK15,
  author = {Takanori Maehara and
@@ -642,12 +419,7 @@
  Seoul, South Korea, April 13-17, 2015},
  pages = {603--614},
  year = {2015},
- crossref = {DBLP:conf/icde/2015},
  url = {https://doi.org/10.1109/ICDE.2015.7113318},
- doi = {10.1109/ICDE.2015.7113318},
- timestamp = {Wed, 17 May 2017 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/conf/icde/MaeharaKK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/icml/MaeharaYK15,
  author = {Takanori Maehara and
@@ -659,11 +431,7 @@
  {ICML} 2015, Lille, France, 6-11 July 2015},
  pages = {428--437},
  year = {2015},
- crossref = {DBLP:conf/icml/2015},
  url = {http://jmlr.org/proceedings/papers/v37/maehara15.html},
- timestamp = {Wed, 29 Mar 2017 16:45:25 +0200},
- biburl = {https://dblp.org/rec/bib/conf/icml/MaeharaYK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/ijcai/BollegalaMK15,
  author = {Danushka Bollegala and
@@ -675,11 +443,7 @@
  25-31, 2015},
  pages = {1222--1228},
  year = {2015},
- crossref = {DBLP:conf/ijcai/2015},
  url = {http://ijcai.org/Abstract/15/176},
- timestamp = {Wed, 20 Jul 2016 15:18:06 +0200},
- biburl = {https://dblp.org/rec/bib/conf/ijcai/BollegalaMK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/kdd/HayashiMTK15,
  author = {Kohei Hayashi and
@@ -692,12 +456,7 @@
  10-13, 2015},
  pages = {417--426},
  year = {2015},
- crossref = {DBLP:conf/kdd/2015},
  url = {https://doi.org/10.1145/2783258.2783402},
- doi = {10.1145/2783258.2783402},
- timestamp = {Tue, 06 Nov 2018 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/conf/kdd/HayashiMTK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/kdd/OhsakaMK15,
  author = {Naoto Ohsaka and
@@ -709,12 +468,7 @@
  10-13, 2015},
  pages = {875--884},
  year = {2015},
- crossref = {DBLP:conf/kdd/2015},
  url = {https://doi.org/10.1145/2783258.2783297},
- doi = {10.1145/2783258.2783297},
- timestamp = {Tue, 06 Nov 2018 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/conf/kdd/OhsakaMK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/mco/MaeharaMM15,
  author = {Takanori Maehara and
@@ -728,12 +482,7 @@
  Part {I}},
  pages = {181--190},
  year = {2015},
- crossref = {DBLP:conf/mco/2015-1},
  url = {https://doi.org/10.1007/978-3-319-18161-5\_16},
- doi = {10.1007/978-3-319-18161-5\_16},
- timestamp = {Sun, 21 May 2017 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/conf/mco/MaeharaMM15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/networking/KawaseMK15,
  author = {Yasushi Kawase and
@@ -744,12 +493,7 @@
  Toulouse, France, 20-22 May, 2015},
  pages = {1--9},
  year = {2015},
- crossref = {DBLP:conf/networking/2015},
  url = {https://doi.org/10.1109/IFIPNetworking.2015.7145331},
- doi = {10.1109/IFIPNetworking.2015.7145331},
- timestamp = {Fri, 22 Feb 2019 12:38:47 +0100},
- biburl = {https://dblp.org/rec/bib/conf/networking/KawaseMK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/BollegalaMK15,
  author = {Danushka Bollegala and
@@ -762,9 +506,6 @@
  url = {http://arxiv.org/abs/1505.00161},
  archivePrefix = {arXiv},
  eprint = {1505.00161},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/BollegalaMK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/BollegalaMK15a,
  author = {Danushka Bollegala and
@@ -777,9 +518,6 @@
  url = {http://arxiv.org/abs/1505.07184},
  archivePrefix = {arXiv},
  eprint = {1505.07184},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/BollegalaMK15a},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/BollegalaMMK15,
  author = {Danushka Bollegala and
@@ -793,9 +531,6 @@
  url = {http://arxiv.org/abs/1511.06438},
  archivePrefix = {arXiv},
  eprint = {1511.06438},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/BollegalaMMK15},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/pvldb/MaeharaAIK14,
  author = {Takanori Maehara and
@@ -809,10 +544,6 @@
  pages = {1023--1034},
  year = {2014},
  url = {http://www.vldb.org/pvldb/vol7/p1023-maehara.pdf},
- doi = {10.14778/2732977.2732978},
- timestamp = {Thu, 16 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/pvldb/MaeharaAIK14},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/kdd/MaeharaKK14,
  author = {Takanori Maehara and
@@ -825,12 +556,7 @@
  2014},
  pages = {1426--1435},
  year = {2014},
- crossref = {DBLP:conf/kdd/2014},
  url = {https://doi.org/10.1145/2623330.2623696},
- doi = {10.1145/2623330.2623696},
- timestamp = {Tue, 06 Nov 2018 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/conf/kdd/MaeharaKK14},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/kdd/AkibaMK14,
  author = {Takuya Akiba and
@@ -843,12 +569,7 @@
  2014},
  pages = {1476--1485},
  year = {2014},
- crossref = {DBLP:conf/kdd/2014},
  url = {https://doi.org/10.1145/2623330.2623753},
- doi = {10.1145/2623330.2623753},
- timestamp = {Tue, 06 Nov 2018 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/conf/kdd/AkibaMK14},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/sigmod/KusumotoMK14,
  author = {Mitsuru Kusumoto and
@@ -859,12 +580,7 @@
  UT, USA, June 22-27, 2014},
  pages = {325--336},
  year = {2014},
- crossref = {DBLP:conf/sigmod/2014},
  url = {https://doi.org/10.1145/2588555.2610526},
- doi = {10.1145/2588555.2610526},
- timestamp = {Tue, 06 Nov 2018 00:00:00 +0100},
- biburl = {https://dblp.org/rec/bib/conf/sigmod/KusumotoMK14},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/TakaguchiMTK14,
  author = {Taro Takaguchi and
@@ -879,9 +595,6 @@
  url = {http://arxiv.org/abs/1411.7091},
  archivePrefix = {arXiv},
  eprint = {1411.7091},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/TakaguchiMTK14},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/MaeharaKK14,
  author = {Takanori Maehara and
@@ -894,9 +607,6 @@
  url = {http://arxiv.org/abs/1411.7228},
  archivePrefix = {arXiv},
  eprint = {1411.7228},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/MaeharaKK14},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/corr/BollegalaMYK14,
  author = {Danushka Bollegala and
@@ -910,9 +620,6 @@
  url = {http://arxiv.org/abs/1412.2378},
  archivePrefix = {arXiv},
  eprint = {1412.2378},
- timestamp = {Mon, 13 Aug 2018 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/corr/BollegalaMYK14},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @article{DBLP:journals/siammax/MaeharaM11,
  author = {Takanori Maehara and
@@ -925,10 +632,6 @@
  pages = {605--620},
  year = {2011},
  url = {https://doi.org/10.1137/090779966},
- doi = {10.1137/090779966},
- timestamp = {Fri, 26 May 2017 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/journals/siammax/MaeharaM11},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{DBLP:conf/ica/GutchMT10,
  author = {Harold W. Gutch and
@@ -940,10 +643,5 @@
  Proceedings},
  pages = {370--377},
  year = {2010},
- crossref = {DBLP:conf/ica/2010},
  url = {https://doi.org/10.1007/978-3-642-15995-4\_46},
- doi = {10.1007/978-3-642-15995-4\_46},
- timestamp = {Fri, 02 Jun 2017 01:00:00 +0200},
- biburl = {https://dblp.org/rec/bib/conf/ica/GutchMT10},
- bibsource = {dblp computer science bibliography, https://dblp.org}
 }
