--- a/maehara.bib
+++ b/maehara.bib
@@ -6,7 +6,7 @@
  year = {2019},
  url = {https://doi.org/10.1007/978-3-030-10564-8\_20},
 }
-@article{DBLP:journals/corr/abs-1901-08291,
+@misc{fukuchi2019pretending,
  author = {Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
  title = {Pretending Fair Decisions via Stealthily Biased Sampling},
  journal = {CoRR},
@@ -14,25 +14,24 @@
  year = {2019},
  url = {http://arxiv.org/abs/1901.08291},
 }
-@article{DBLP:journals/corr/abs-1902-08742,
- author = {Takanori Maehara and
- Kazutoshi Ando},
+@misc{maehara2019optimal,
+ author = {Takanori Maehara and Kazutoshi Ando},
  title = {Optimal Algorithm to Reconstruct a Tree from a Subtree Distance},
  journal = {CoRR},
  volume = {abs/1902.08742},
  year = {2019},
  url = {http://arxiv.org/abs/1902.08742},
 }
-@article{DBLP:journals/mp/MaeharaMM18,
- author = {Takanori Maehara and
- Naoki Marumo and
- Kazuo Murota},
+@article{maehara2018continuous,
+ author = {Takanori Maehara and Naoki Marumo and Kazuo Murota},
  title = {Continuous relaxation for discrete {DC} programming},
- journal = {Math. Program.},
+ journal = {Mathematical Programming Series B},
  volume = {169},
  number = {1},
  pages = {199--219},
  year = {2018},
+ month = {April},
+ day = {15},
  url = {https://doi.org/10.1007/s10107-017-1139-2},
 }
 @article{DBLP:journals/netsci/TakaguchiMKT18,
