--- a/maehara.bib
+++ b/maehara.bib
@@ -164,105 +164,54 @@
  year = {2017},
  url = {http://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14304},
 }
-@inproceedings{DBLP:conf/aaai/HatanoFMK17,
- author = {Daisuke Hatano and
- Takuro Fukunaga and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
+@inproceedings{hatano2017scalable,
+ author = {Daisuke Hatano and Takuro Fukunaga and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {Scalable Algorithm for Higher-Order Co-Clustering via Random Sampling},
- booktitle = {Proceedings of the Thirty-First {AAAI} Conference on Artificial Intelligence,
- February 4-9, 2017, San Francisco, California, {USA.}},
+ booktitle = {Proceedings of the 31st AAAI Conference on Artificial Intelligence (AAAI'17), February 4-9, 2017, San Francisco, California, {USA.}},
  pages = {1992--1999},
  year = {2017},
  url = {http://aaai.org/ocs/index.php/AAAI/AAAI17/paper/view/14850},
 }
-@inproceedings{DBLP:conf/nips/ImaizumiMH17,
- author = {Masaaki Imaizumi and
- Takanori Maehara and
- Kohei Hayashi},
- title = {On Tensor Train Rank Minimization : Statistical Efficiency and Scalable
- Algorithm},
- booktitle = {Advances in Neural Information Processing Systems 30: Annual Conference
- on Neural Information Processing Systems 2017, 4-9 December 2017,
- Long Beach, CA, {USA}},
+@inproceedings{imaizumi2017tensor,
+ author = {Masaaki Imaizumi and Takanori Maehara and Kohei Hayashi},
+ title = {On Tensor Train Rank Minimization : Statistical Efficiency and Scalable Algorithm},
+ booktitle = {Proceedings of the 30th Annual Conference on Neural Information Processing Systems (NIPS'17), December 4-9 2017, Long Beach, CA, {USA}},
  pages = {3933--3942},
  year = {2017},
  url = {http://papers.nips.cc/paper/6982-on-tensor-train-rank-minimization-statistical-efficiency-and-scalable-algorithm},
 }
-@inproceedings{DBLP:conf/www/MaeharaSI17,
- author = {Takanori Maehara and
- Hirofumi Suzuki and
- Masakazu Ishihata},
+@inproceedings{maehara2017exact,
+ author = {Takanori Maehara and Hirofumi Suzuki and Masakazu Ishihata},
  title = {Exact Computation of Influence Spread by Binary Decision Diagrams},
- booktitle = {Proceedings of the 26th International Conference on World Wide Web,
- {WWW} 2017, Perth, Australia, April 3-7, 2017},
+ booktitle = {Proceedings of the 26th International Conference on World Wide Web (WWW'17), Perth, Australia, April 3-7, 2017},
  pages = {947--956},
  year = {2017},
  url = {https://doi.org/10.1145/3038912.3052567},
 }
-@article{DBLP:journals/corr/MaeharaSI17,
- author = {Takanori Maehara and
- Hirofumi Suzuki and
- Masakazu Ishihata},
- title = {Exact Computation of Influence Spread by Binary Decision Diagrams},
- journal = {CoRR},
- volume = {abs/1701.01540},
- year = {2017},
- url = {http://arxiv.org/abs/1701.01540},
- archivePrefix = {arXiv},
- eprint = {1701.01540},
+@article{takabe2018typical,
+  title={Typical approximation performance for maximum coverage problem},
+  author={Satoshi Takabe and Takanori Maehara and Koji Hukushima},
+  journal={Physical Review E},
+  volume={97},
+  number={2},
+  pages={022138},
+  year={2018},
+  month = {February 23},
+  publisher={APS}
+  url = {https://doi.org/10.1103/PhysRevE.97.022138},
 }
-@article{DBLP:journals/corr/FukunagaM17,
- author = {Takuro Fukunaga and
- Takanori Maehara},
- title = {Computing a tree having a small vertex cover},
- journal = {CoRR},
- volume = {abs/1701.08897},
- year = {2017},
- url = {http://arxiv.org/abs/1701.08897},
- archivePrefix = {arXiv},
- eprint = {1701.08897},
-}
-@article{DBLP:journals/corr/TakabeMH17,
- author = {Satoshi Takabe and
- Takanori Maehara and
- Koji Hukushima},
- title = {Typical Approximation Performance for Maximum Coverage Problem},
- journal = {CoRR},
- volume = {abs/1706.08721},
- year = {2017},
- url = {http://arxiv.org/abs/1706.08721},
- archivePrefix = {arXiv},
- eprint = {1706.08721},
-}
-@article{DBLP:journals/corr/MaeharaY17,
- author = {Takanori Maehara and
- Yutaro Yamaguchi},
- title = {Stochastic Packing Integer Programs with Few Queries},
- journal = {CoRR},
- volume = {abs/1707.04020},
- year = {2017},
- url = {http://arxiv.org/abs/1707.04020},
- archivePrefix = {arXiv},
- eprint = {1707.04020},
-}
-@article{DBLP:journals/snam/NishiTOMTKM16,
- author = {Ryosuke Nishi and
- Taro Takaguchi and
- Keigo Oka and
- Takanori Maehara and
- Masashi Toyoda and
- Ken{-}ichi Kawarabayashi and
- Naoki Masuda},
+@article{nishi2016reply,
+ author = {Ryosuke Nishi and Taro Takaguchi and Keigo Oka and Takanori Maehara and Masashi Toyoda and Ken{-}ichi Kawarabayashi and Naoki Masuda},
  title = {Reply trees in Twitter: data analysis and branching process models},
- journal = {Social Netw. Analys. Mining},
+ journal = {Social Network Analysis and Mining},
  volume = {6},
  number = {1},
  pages = {26:1--26:13},
  year = {2016},
+ month = {December},
  url = {https://doi.org/10.1007/s13278-016-0334-0},
 }
-@inproceedings{DBLP:conf/aaai/MaeharaHK16,
+@inproceedings{maehara2016expected,
  author = {Takanori Maehara and Kohei Hayashi and Ken{-}ichi Kawarabayashi},
  title = {Expected Tensor Decomposition with Stochastic Gradient Descent},
  booktitle = {Proceedings of the 30th AAAI Conference on Artificial Intelligence (AAAI'16), February 12-17, 2016, Phoenix, Arizona, {USA.}},
