--- a/maehara.bib
+++ b/maehara.bib
@@ -351,9 +351,8 @@
 }
 @inproceedings{maehara2014computing,
  author = {Takanori Maehara and Takuya Akiba and Yoichi Iwata and Ken{-}ichi Kawarabayashi},
- title = {Proceedings of the 40th International Conference on Very Large Data Bases (VLDB'14), Hangzhou, China, 1-5, September, 2014}
-   Computing Personalized PageRank Quickly by Exploiting Graph Structures},
- journal = {PVLDB},
+ title = {Computing Personalized PageRank Quickly by Exploiting Graph Structures},
+ journal = {Proceedings of the 40th International Conference on Very Large Data Bases (VLDB'14), Hangzhou, China, 1-5, September, 2014},
  volume = {7},
  number = {12},
  pages = {1023--1034},
