--- a/maehara.bib
+++ b/maehara.bib
@@ -6,7 +6,7 @@
  year = {2019},
  url = {https://doi.org/10.1007/978-3-030-10564-8\_20},
 }
-@article{fukuchi2019pretending,
+@misc{fukuchi2019pretending,
  author = {Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
  title = {Pretending Fair Decisions via Stealthily Biased Sampling},
  journal = {CoRR},
@@ -14,7 +14,7 @@
  year = {2019},
  url = {http://arxiv.org/abs/1901.08291},
 }
-@article{maehara2019optimal,
+@misc{maehara2019optimal,
  author = {Takanori Maehara and Kazutoshi Ando},
  title = {Optimal Algorithm to Reconstruct a Tree from a Subtree Distance},
  journal = {CoRR},
@@ -106,7 +106,7 @@
  year = {2018},
  url = {https://doi.org/10.1137/1.9781611975031.21},
 }
-@article{hara2018maximally,
+@misc{hara2018maximally,
  author = {Satoshi Hara and Kouichi Ikeno and Tasuku Soma and Takanori Maehara},
  title = {Maximally Invariant Data Perturbation as Explanation},
  journal = {CoRR},
@@ -114,7 +114,7 @@
  year = {2018},
  url = {http://arxiv.org/abs/1806.07004},
 }
-@article{ishihata2018algorithmic,
+@misc{ishihata2018algorithmic,
  author = {Masakazu Ishihata and Takanori Maehara and Tomas Rigaux},
  title = {Algorithmic Meta-Theorems for Monotone Submodular Maximization},
  journal = {CoRR},
@@ -122,17 +122,16 @@
  year = {2018},
  url = {http://arxiv.org/abs/1807.04575},
 }
-@article{ben2019submodular,
+@misc{ben2019submodular,
  author = {Ben Chugg and Takanori Maehara},
  title = {Submodular Stochastic Probing with Prices},
  journal = {CoRR},
  volume = {abs/1810.01730},
  year = {2018},
  url = {http://arxiv.org/abs/1810.01730},
- archivePrefix = {arXiv},
  eprint = {1810.01730},
 }
-@article{komiyama2018simple,
+@misc{komiyama2018simple,
  author = {Junpei Komiyama and Takanori Maehara},
  title = {A Simple Way to Deal with Cherry-picking},
  journal = {CoRR},
@@ -140,7 +139,7 @@
  year = {2018},
  url = {http://arxiv.org/abs/1810.04996},
 }
-@article{hara2018convex,
+@misc{hara2018convex,
  author = {Satoshi Hara and Takanori Maehara},
  title = {Convex Hull Approximation of Nearly Optimal Lasso Solutions},
  journal = {CoRR},
@@ -367,14 +366,13 @@
  year = {2014},
  url = {https://doi.org/10.1145/2588555.2610526},
 }
-@article{maehara2014efficient,
+@misc{maehara2014efficient,
  author = {Takanori Maehara and Mitsuru Kusumoto and Ken{-}ichi Kawarabayashi},
  title = {Efficient SimRank Computation via Linearization},
  journal = {CoRR},
  volume = {abs/1411.7228},
  year = {2014},
  url = {http://arxiv.org/abs/1411.7228},
- archivePrefix = {arXiv},
  eprint = {1411.7228},
 }
 @article{maehara2011algorithm,
