--- a/maehara.bib
+++ b/maehara.bib
@@ -22,17 +22,6 @@
  year = {2019},
  url = {http://arxiv.org/abs/1902.08742},
 }
-@article{maehara2018continuous,
- author = {Takanori Maehara and Naoki Marumo and Kazuo Murota},
- title = {Continuous relaxation for discrete {DC} programming},
- journal = {Mathematical Programming Series B},
- volume = {169},
- number = {1},
- pages = {199--219},
- year = {2018},
- month = {15, April},
- url = {https://doi.org/10.1007/s10107-017-1139-2},
-}
 @article{takaguchi2018existence,
  author = {Taro Takaguchi and Takanori Maehara and Ken{-}ichi Kawarabayashi and Masashi Toyoda},
  title = {Existence of outsiders as a characteristic of online communication networks},
@@ -41,13 +30,19 @@
  number = {4},
  pages = {431--447},
  year = {2018},
+ month = {December},
  url = {https://doi.org/10.1017/nws.2018.17},
 }
+@conference{courtino2018limits,
+ author = {Mario Coutino and Elvin Isufi and Takanori Maehara and Geert Leus},
+ title = {On The Limits of Finite-Time Distributed Consensus Through Successive Local Linear Operations},
+ booktitle = {Proceedings of the 52nd Asilomar Conference on Signals, Systems, and Computers (ACSSC'18), Pacific Grove, CA, USA, October 28-31, 2018},
+ pages = {993--997},
+ year = {2018},
+ url = {https://doi.org/10.1109/ACSSC.2018.8645186},
+}
 @article{bollegala2018classinet,
- author = {Danushka Bollegala and
- Vincent Atanasov and
- Takanori Maehara and
- Ken{-}ichi Kawarabayashi},
+ author = {Danushka Bollegala and Vincent Atanasov and Takanori Maehara and Ken{-}ichi Kawarabayashi},
  title = {ClassiNet - Predicting Missing Features for Short-Text Classification},
  journal = {ACM Transactions on Knowledge Discovery from Data},
  volume = {12},
@@ -57,35 +52,10 @@
  month = {July},
  url = {https://doi.org/10.1145/3201578},
 }
-@inproceedings{osogami2018dynamic,
- author = {Takayuki Osogami and Rudy Raymond and Akshay Goel and Tomoyuki Shirai and Takanori Maehara},
- title = {Dynamic Determinantal Point Processes},
- booktitle = {Proceedings of the 32nd AAAI Conference on Artificial Intelligence (AAAI'18), the 30th innovative Applications of Artificial Intelligence (IAAI-18), and the 8th {AAAI} Symposium on Educational Advances in Artificial Intelligence (EAAI-18), New Orleans, Louisiana, USA, February
- 2-7, 2018},
- pages = {3868--3875},
- year = {2018},
- url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16081},
-}
-@conference{courtino2018limits,
- author = {Mario Coutino and Elvin Isufi and Takanori Maehara and Geert Leus},
- title = {On The Limits of Finite-Time Distributed Consensus Through Successive Local Linear Operations},
- booktitle = {Proceedings of the 52nd Asilomar Conference on Signals, Systems, and Computers (ACSSC'18), 2018, Pacific Grove, CA, USA, October 28-31, 2018},
- pages = {993--997},
- year = {2018},
- url = {https://doi.org/10.1109/ACSSC.2018.8645186},
-}
-@inproceedings{imaizumi2018statistically,
- author = {Masaaki Imaizumi and Takanori Maehara and Yuichi Yoshida},
- title = {Statistically Efficient Estimation for Non-Smooth Probability Densities},
- booktitle = {International Conference on Artificial Intelligence and Statistics (AISTATS'18), 9-11 April 2018, Playa Blanca, Lanzarote, Canary Islands, Spain},
- pages = {978--987},
- year = {2018},
- url = {http://proceedings.mlr.press/v84/imaizumi18a.html},
-}
 @inproceedings{taniai2018neural,
  author = {Tatsunori Taniai and Takanori Maehara},
  title = {Neural Inverse Rendering for General Reflectance Photometric Stereo},
- booktitle = {Proceedings of the 35th International Conference on Machine Learning (ICML'18), Stockholmsm{\"{a}}ssan, Stockholm, Sweden, July 10-15, 2018},
+ booktitle = {Proceedings of the 35th International Conference on Machine Learning (ICML'18), Stockholm, Sweden, July 10-15, 2018},
  pages = {4864--4873},
  year = {2018},
  url = {http://proceedings.mlr.press/v80/taniai18a.html},
@@ -93,10 +63,48 @@
 @inproceedings{maehara2018optimal,
  author = {Takanori Maehara and Atsuhiro Narita and Jun Baba and Takayuki Kawabata},
  title = {Optimal Bidding Strategy for Brand Advertising},
- booktitle = {Proceedings of the 27th International Joint Conference on Artificial Intelligence (IJCAI'18), July 13-19, 2018, Stockholm, Sweden.},
+ booktitle = {Proceedings of the 27th International Joint Conference on Artificial Intelligence (IJCAI'18), Stockholm, Sweden, July 13-19, 2018},
  pages = {424--432},
  year = {2018},
  url = {https://doi.org/10.24963/ijcai.2018/59},
+}
+@article{maehara2018continuous,
+ author = {Takanori Maehara and Naoki Marumo and Kazuo Murota},
+ title = {Continuous relaxation for discrete {DC} programming},
+ journal = {Mathematical Programming Series B},
+ volume = {169},
+ number = {1},
+ pages = {199--219},
+ year = {2018},
+ month = {April 15},
+ url = {https://doi.org/10.1007/s10107-017-1139-2},
+}
+@inproceedings{imaizumi2018statistically,
+ author = {Masaaki Imaizumi and Takanori Maehara and Yuichi Yoshida},
+ title = {Statistically Efficient Estimation for Non-Smooth Probability Densities},
+ booktitle = {International Conference on Artificial Intelligence and Statistics (AISTATS'18), Playa Blanca, Lanzarote, Canary Islands, Spain, 9-11 April 2018},
+ pages = {978--987},
+ year = {2018},
+ url = {http://proceedings.mlr.press/v84/imaizumi18a.html},
+}
+@article{takabe2018typical,
+  title={Typical approximation performance for maximum coverage problem},
+  author={Satoshi Takabe and Takanori Maehara and Koji Hukushima},
+  journal={Physical Review E},
+  volume={97},
+  number={2},
+  pages={022138},
+  year={2018},
+  month = {February 23},
+  url = {https://doi.org/10.1103/PhysRevE.97.022138},
+}
+@inproceedings{osogami2018dynamic,
+ author = {Takayuki Osogami and Rudy Raymond and Akshay Goel and Tomoyuki Shirai and Takanori Maehara},
+ title = {Dynamic Determinantal Point Processes},
+ booktitle = {Proceedings of the 32nd AAAI Conference on Artificial Intelligence (AAAI'18), New Orleans, Louisiana, USA., February 2-7, 2018},
+ pages = {3868--3875},
+ year = {2018},
+ url = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16081},
 }
 @inproceedings{maehara2018stochastic,
  author = {Takanori Maehara, Yutaro Yamaguchi},
@@ -187,18 +195,6 @@
  year = {2017},
  url = {https://doi.org/10.1145/3038912.3052567},
 }
-@article{takabe2018typical,
-  title={Typical approximation performance for maximum coverage problem},
-  author={Satoshi Takabe and Takanori Maehara and Koji Hukushima},
-  journal={Physical Review E},
-  volume={97},
-  number={2},
-  pages={022138},
-  year={2018},
-  month = {February 23},
-  publisher={APS}
-  url = {https://doi.org/10.1103/PhysRevE.97.022138},
-}
 @article{nishi2016reply,
  author = {Ryosuke Nishi and Taro Takaguchi and Keigo Oka and Takanori Maehara and Masashi Toyoda and Ken{-}ichi Kawarabayashi and Naoki Masuda},
  title = {Reply trees in Twitter: data analysis and branching process models},
@@ -244,16 +240,15 @@
  year = {2015},
  url = {https://doi.org/10.1007/s10479-015-1835-3},
 }
-@article{DBLP:journals/mp/MaeharaM15,
- author = {Takanori Maehara and
- Kazuo Murota},
+@article{maehara2015framework,
+ author = {Takanori Maehara and Kazuo Murota},
  title = {A framework of discrete {DC} programming by discrete convex analysis},
- journal = {Math. Program.},
+ journal = {Mathematical Programming, Series A},
  volume = {152},
  number = {1-2},
  pages = {435--466},
  year = {2015},
- month = June,
+ month = {June},
  url = {https://doi.org/10.1007/s10107-014-0792-y},
 }
 @article{maehara2015,
