--- a/maehara.bib
+++ b/maehara.bib
@@ -1,4 +1,4 @@
-@inproceedings{kumabe2019linear
+@inproceedings{kumabe2019linear,
  author = {Soh Kumabe and Takanori Maehara and Ryoma Sin'ya},
  title = {Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
  booktitle = {13th International Conference and Workshops on Algorithms and Computation (WALCOM'19), Guwahati, India, February 27 - March 2, 2019, Proceedings},
