--- a/maehara.bib
+++ b/maehara.bib
@@ -238,6 +238,7 @@
  number = {1},
  pages = {565--590},
  year = {2015},
+ month = {June},
  url = {https://doi.org/10.1007/s10479-015-1835-3},
 }
 @article{maehara2015framework,
