--- a/maehara.bib
+++ b/maehara.bib
@@ -390,3 +390,15 @@
  year = {2010},
  url = {https://doi.org/10.1007/978-3-642-15995-4\_46},
 }
+@article{funada2005ellipsoidal,
+  title={Ellipsoidal model of the rise of a Taylor bubble in a round tube},
+  author={Funada, T and Joseph, DD and Maehara, T and Yamashita, S},
+  journal={International journal of multiphase flow},
+  volume={31},
+  number={4},
+  pages={473--491},
+  year={2005},
+  month={April},
+  publisher={Elsevier},
+  url = {https://doi.org/10.1016/j.ijmultiphaseflow.2004.11.010},
+}
