--- a/maehara.bib
+++ b/maehara.bib
@@ -33,13 +33,14 @@
  month = {December},
  url = {https://doi.org/10.1017/nws.2018.17},
 }
-@incollection{courtino2018limits,
+@inproceedings{courtino2018limits,
  author = {Mario Coutino and Elvin Isufi and Takanori Maehara and Geert Leus},
  title = {On The Limits of Finite-Time Distributed Consensus Through Successive Local Linear Operations},
  booktitle = {Proceedings of the 52nd Asilomar Conference on Signals, Systems, and Computers (ACSSC'18), Pacific Grove, CA, USA, October 28-31, 2018},
  pages = {993--997},
  year = {2018},
  url = {https://doi.org/10.1109/ACSSC.2018.8645186},
+ note = {non-peer-reviewed},
 }
 @article{bollegala2018classinet,
  author = {Danushka Bollegala and Vincent Atanasov and Takanori Maehara and Ken{-}ichi Kawarabayashi},
