--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -6,21 +6,30 @@
  year = {2019},
  url = {https://doi.org/10.1007/978-3-030-10564-8\_20},
 }
-@misc{fukuchi2019pretending,
- author = {Kazuto Fukuchi and Satoshi Hara and Takanori Maehara},
- title = {Pretending Fair Decisions via Stealthily Biased Sampling},
- journal = {CoRR},
- volume = {abs/1901.08291},
- year = {2019},
- url = {http://arxiv.org/abs/1901.08291},
+@article{fukunaga2019lp,
+  author = {Takuro Fukunaga},
+  title = {LP-based pivoting algorithm for higher-order correlation clustering},
+  journal = {Journal of Combinatorial Optimization},
+  pages = {in press},
+  year = {2019},
 }
-@misc{maehara2019optimal,
- author = {Takanori Maehara and Kazutoshi Ando},
- title = {Optimal Algorithm to Reconstruct a Tree from a Subtree Distance},
- journal = {CoRR},
- volume = {abs/1902.08742},
- year = {2019},
- url = {http://arxiv.org/abs/1902.08742},
+@inproceedings{fukunaga2019stochastic,
+  author ={Takuro Fukunaga and Takuya Konishi and Sumio Fujita and Ken{-}ichi Kawarabayashi},
+  title = {Stochastic Submodular Maximization with Performance-Dependent Item Costs},
+  booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, USA, January 27 - February 1, 2019},
+  year = {2019},
+}
+@inproceedings{nakashima2019subspace,
+  author = {So Nakashima and Takanori Maehara}, 
+  title = {Subspace Selection via DR-Submodular Maximization on Lattices},
+  booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, USA, January 27 - February 1, 2019},
+  year = {2019},
+}
+@inproceedings{maehara2019group,
+  author = {Takanori Maehara and Yuma Inoue},
+  title = {Group Decision Diagram ({GDD}): A Compact Representation for Permutations}, 
+  booktitle = {in Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 01, 2019.}
+  year = {2019},
 }
 @article{takaguchi2018existence,
  author = {Taro Takaguchi and Takanori Maehara and Ken{-}ichi Kawarabayashi and Masashi Toyoda},
@@ -33,14 +42,24 @@
  month = {December},
  url = {https://doi.org/10.1017/nws.2018.17},
 }
-@inproceedings{courtino2018limits,
- author = {Mario Coutino and Elvin Isufi and Takanori Maehara and Geert Leus},
- title = {On The Limits of Finite-Time Distributed Consensus Through Successive Local Linear Operations},
- booktitle = {Proceedings of the 52nd Asilomar Conference on Signals, Systems, and Computers (ACSSC'18), Pacific Grove, CA, USA, October 28-31, 2018},
- pages = {993--997},
+@article{fukunaga2018approximation,
+ author = {Takuro Fukunaga},
+ title = {Approximation Algorithms for Highly Connected Multi-dominating Sets in Unit Disk Graphs},
+ journal = {Algorithmica},
+ volume = {80},
+ number = {11},
+ pages = {3270--3292},
  year = {2018},
- url = {https://doi.org/10.1109/ACSSC.2018.8645186},
- note = {non-peer-reviewed},
+ month = {November},
+ url = {https://doi.org/10.1007/s00453-017-0385-2},
+}
+@inproceedings{ohsaka2018boosting,
+ author = {Naoto Ohsaka and Tomohiro Sonobe and Naonori Kakimura and Takuro Fukunaga and Sumio Fujita and Ken{-}ichi Kawarabayashi},
+ title = {Boosting PageRank Scores by Optimizing Internal Link Structure},
+ booktitle = {Procedingsof the 29th International Conference on Database and Expert Systems Applications (DEXA'18), Regensburg, Germany, September 3-6, 2018},
+ pages = {424--439},
+ year = {2018},
+ url = {https://doi.org/10.1007/978-3-319-98809-2\_26},
 }
 @article{bollegala2018classinet,
  author = {Danushka Bollegala and Vincent Atanasov and Takanori Maehara and Ken{-}ichi Kawarabayashi},
@@ -61,6 +80,14 @@
  year = {2018},
  url = {http://proceedings.mlr.press/v80/taniai18a.html},
 }
+@inproceedings{yabe2018causal,
+ author = {Akihiro Yabe and Daisuke Hatano and Hanna Sumita and Shinji Ito and Naonori Kakimura and Takuro Fukunaga and Ken{-}ichi Kawarabayashi},
+ title = {Causal Bandits with Propagating Inference},
+ booktitle = {Proceedings of the 35th International Conference on Machine Learning (ICML,18), Stockholm, Sweden, July 10-15, 2018},
+ pages = {5508--5516},
+ year = {2018},
+ url = {http://proceedings.mlr.press/v80/yabe18a.html},
+}
 @inproceedings{maehara2018optimal,
  author = {Takanori Maehara and Atsuhiro Narita and Jun Baba and Takayuki Kawabata},
  title = {Optimal Bidding Strategy for Brand Advertising},
@@ -68,6 +95,22 @@
  pages = {424--432},
  year = {2018},
  url = {https://doi.org/10.24963/ijcai.2018/59},
+}
+@inproceedings{fukunaga2018lp,
+ author = {Takuro Fukunaga},
+ title = {LP-Based Pivoting Algorithm for Higher-Order Correlation Clustering},
+ booktitle = {Proceedings of the 24th International Conference on Computing and Combinatorics (COCOON'18), Qing Dao, China, July 2-4, 2018},
+ pages = {51--62},
+ year = {2018},
+ url = {https://doi.org/10.1007/978-3-319-94776-1\_5},
+}
+@inproceedings{kawase2018submodular,
+ author = {Yasushi Kawase and Hanna Sumita and Takuro Fukunaga},
+ title = {Submodular Maximization with Uncertain Knapsack Capacity},
+ booktitle = {Proceedings of the 13th Latin American Symposium on Theoretical Informatics (LATIN'18), Buenos Aires, Argentina, April 16-19, 2018},
+ pages = {653--668},
+ year = {2018},
+ url = {https://doi.org/10.1007/978-3-319-77404-6\_48},
 }
 @article{maehara2018continuous,
  author = {Takanori Maehara and Naoki Marumo and Kazuo Murota},
@@ -79,6 +122,14 @@
  year = {2018},
  month = {April 15},
  url = {https://doi.org/10.1007/s10107-017-1139-2},
+}
+@inproceedings{ito2018online,
+ author = {Shinji Ito and Daisuke Hatano and Hanna Sumita and Akihiro Yabe and Takuro Fukunaga and Naonori Kakimura and Ken{-}ichi Kawarabayashi},
+ title = {Online Regression with Partial Information: Generalization and Linear Projection},
+ booktitle = {Proceedings of the 21st International Conference on Artificial Intelligence and Statistics, (AISTATS'18), Playa Blanca, Lanzarote, Canary Islands, Spain, 9-11 April 2018},
+ pages = {1599--1607},
+ year = {2018},
+ url = {http://proceedings.mlr.press/v84/ito18a.html},
 }
 @inproceedings{imaizumi2018statistically,
  author = {Masaaki Imaizumi and Takanori Maehara and Yuichi Yoshida},
@@ -114,45 +165,4 @@
  pages = {293--310},
  year = {2018},
  url = {https://doi.org/10.1137/1.9781611975031.21},
-}
-@misc{hara2018maximally,
- author = {Satoshi Hara and Kouichi Ikeno and Tasuku Soma and Takanori Maehara},
- title = {Maximally Invariant Data Perturbation as Explanation},
- journal = {CoRR},
- volume = {abs/1806.07004},
- year = {2018},
- url = {http://arxiv.org/abs/1806.07004},
-}
-@misc{ishihata2018algorithmic,
- author = {Masakazu Ishihata and Takanori Maehara and Tomas Rigaux},
- title = {Algorithmic Meta-Theorems for Monotone Submodular Maximization},
- journal = {CoRR},
- volume = {abs/1807.04575},
- year = {2018},
- url = {http://arxiv.org/abs/1807.04575},
-}
-@misc{ben2019submodular,
- author = {Ben Chugg and Takanori Maehara},
- title = {Submodular Stochastic Probing with Prices},
- journal = {CoRR},
- volume = {abs/1810.01730},
- year = {2018},
- url = {http://arxiv.org/abs/1810.01730},
- eprint = {1810.01730},
-}
-@misc{komiyama2018simple,
- author = {Junpei Komiyama and Takanori Maehara},
- title = {A Simple Way to Deal with Cherry-picking},
- journal = {CoRR},
- volume = {abs/1810.04996},
- year = {2018},
- url = {http://arxiv.org/abs/1810.04996},
-}
-@misc{hara2018convex,
- author = {Satoshi Hara and Takanori Maehara},
- title = {Convex Hull Approximation of Nearly Optimal Lasso Solutions},
- journal = {CoRR},
- volume = {abs/1810.05992},
- year = {2018},
- url = {http://arxiv.org/abs/1810.05992},
 }
