--- a/maehara.bib
+++ b/maehara.bib
@@ -1,7 +1,7 @@
 @inproceedings{kumabe2019linear,
  author = {Soh Kumabe and Takanori Maehara and Ryoma Sin'ya},
  title = {Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
- booktitle = {13th International Conference and Workshops on Algorithms and Computation (WALCOM'19), Guwahati, India, February 27 - March 2, 2019, Proceedings},
+ booktitle = {Proceedings of the 13th International Conference and Workshops on Algorithms and Computation (WALCOM'19), Guwahati, India, February 27 - March 2, 2019},
  pages = {248--260},
  year = {2019},
  url = {https://doi.org/10.1007/978-3-030-10564-8\_20},
@@ -21,6 +21,18 @@
  volume = {abs/1902.08742},
  year = {2019},
  url = {http://arxiv.org/abs/1902.08742},
+}
+@inproceedings{nakashima2019subspace,
+  author = {So Nakashima and Takanori Maehara}, 
+  title = {Subspace Selection via DR-Submodular Maximization on Lattices},
+  booktitle = {Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, USA, January 27 - February 1, 2019},
+  year = {2019},
+}
+@inproceedings{maehara2019group,
+  author = {Takanori Maehara and Yuma Inoue},
+  title = {Group Decision Diagram ({GDD}): A Compact Representation for Permutations}, 
+  booktitle = {in Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI'19), Honolulu, Hawaii, United States, January 27--February 01, 2019.}
+  year = {2019},
 }
 @article{takaguchi2018existence,
  author = {Taro Takaguchi and Takanori Maehara and Ken{-}ichi Kawarabayashi and Masashi Toyoda},
