--- a/aip-discopt.bib
+++ b/aip-discopt.bib
@@ -1,7 +1,7 @@
 @inproceedings{kumabe2019linear,
  author = {Soh Kumabe and Takanori Maehara and Ryoma Sin'ya},
  title = {Linear Pseudo-Polynomial Factor Algorithm for Automaton Constrained Tree Knapsack Problem},
- booktitle = {13th International Conference and Workshops on Algorithms and Computation (WALCOM'19), Guwahati, India, February 27 - March 2, 2019, Proceedings},
+ booktitle = {Proceedings of the 13th International Conference and Workshops on Algorithms and Computation (WALCOM'19), Guwahati, India, February 27 - March 2, 2019},
  pages = {248--260},
  year = {2019},
  url = {https://doi.org/10.1007/978-3-030-10564-8\_20},
